3º/AIC/Lab/prac03/code/input.yacc.output
Terminals unused in grammar

    FORM_REG_FF
    FORM_REG_R_FP
    FORM_REG_FP_R


Grammar

    0 $accept: r_inicio $end

    1 $@1: %empty

    2 r_inicio: LABEL $@1 r_linea_ensamblador
    3         | r_linea_ensamblador
    4         | %empty

    5 $@2: %empty

    6 r_linea_ensamblador: r_directiva NL $@2 r_inicio

    7 $@3: %empty

    8 r_linea_ensamblador: r_instruccion NL $@3 r_inicio
    9                    | NL r_inicio
   10                    | r_directiva
   11                    | r_instruccion

   12 r_directiva: DE_DATA
   13            | DE_TEXT
   14            | DE_GLOBL T_ALPHANUM

   15 $@4: %empty

   16 r_directiva: DE_BYTE $@4 r_lista_enteros

   17 $@5: %empty

   18 r_directiva: DE_HALF $@5 r_lista_enteros

   19 $@6: %empty

   20 r_directiva: DE_WORD $@6 r_lista_enteros

   21 $@7: %empty

   22 r_directiva: DE_DWORD $@7 r_lista_enteros

   23 $@8: %empty

   24 r_directiva: DE_FLOAT $@8 r_lista_reales

   25 $@9: %empty

   26 r_directiva: DE_DOUBLE $@9 r_lista_reales
   27            | DE_SPACE T_INT_LIT
   28            | DE_ASCIIZ T_STRING
   29            | DE_IREG r_valores_enteros
   30            | DE_FREG r_valores_fp
   31            | DE_BTB r_valores_btb

   32 $@10: %empty

   33 r_lista_enteros: T_INT_LIT $@10 r_lista_enteros_cont

   34 r_lista_enteros_cont: ',' r_lista_enteros
   35                     | %empty

   36 $@11: %empty

   37 r_lista_reales: T_FP_LIT $@11 r_lista_reales_cont

   38 $@12: %empty

   39 r_lista_reales: T_INT_LIT $@12 r_lista_reales_cont

   40 r_lista_reales_cont: ',' r_lista_reales
   41                    | %empty

   42 $@13: %empty

   43 r_valores_enteros: T_INT_LIT $@13 r_valores_enteros_cont

   44 r_valores_enteros_cont: ',' r_valores_enteros
   45                       | %empty

   46 $@14: %empty

   47 r_valores_fp: T_FP_LIT $@14 r_valores_fp_cont

   48 r_valores_fp_cont: ',' r_valores_fp
   49                  | %empty

   50 $@15: %empty

   51 r_valores_btb: T_INT_LIT $@15 r_valores_btb_cont

   52 r_valores_btb_cont: ',' r_valores_btb
   53                   | %empty

   54 r_inmediato_disp: T_INT_LIT
   55                 | T_ALPHANUM
   56                 | M_HI '(' T_ALPHANUM ')'
   57                 | M_LO '(' T_ALPHANUM ')'
   58                 | M_DISP '(' T_ALPHANUM ')'

   59 r_inmediato_lo: T_INT_LIT
   60               | T_ALPHANUM
   61               | M_HI '(' T_ALPHANUM ')'
   62               | M_LO '(' T_ALPHANUM ')'
   63               | M_DISP '(' T_ALPHANUM ')'

   64 r_inmediato_hi: T_INT_LIT
   65               | T_ALPHANUM
   66               | M_HI '(' T_ALPHANUM ')'
   67               | M_LO '(' T_ALPHANUM ')'
   68               | M_DISP '(' T_ALPHANUM ')'

   69 r_posicion: T_INT_LIT
   70           | T_ALPHANUM

   71 r_instruccion: PINST_LI REG_INT ',' T_INT_LIT
   72              | PINST_LA REG_INT ',' T_ALPHANUM
   73              | INST_RET
   74              | INST_NOP
   75              | INST_SYSCALL
   76              | FORM_INM_L REG_INT ',' r_inmediato_disp '(' REG_INT ')'
   77              | FORM_INM_FP_L REG_FP ',' r_inmediato_disp '(' REG_INT ')'
   78              | FORM_INM_S REG_INT ',' r_inmediato_disp '(' REG_INT ')'
   79              | FORM_INM_FP_S REG_FP ',' r_inmediato_disp '(' REG_INT ')'
   80              | FORM_REG REG_INT ',' REG_INT ',' REG_INT
   81              | FORM_FP_REG REG_FP ',' REG_FP ',' REG_FP
   82              | FORM_FP_REG_DF REG_FP ',' REG_FP
   83              | FORM_REG REG_INT ',' REG_INT ',' r_inmediato_disp
   84              | FORM_INM REG_INT ',' REG_INT ',' r_inmediato_disp
   85              | FORM_INM_T T_INT_LIT
   86              | FORM_INM_HI REG_INT ',' r_inmediato_hi
   87              | FORM_INM_LO REG_INT ',' r_inmediato_lo
   88              | FORM_FP_REG_FF REG_FP ',' REG_FP
   89              | FORM_INM_B_FI REG_INT ',' r_posicion
   90              | FORM_INM_B_FFI REG_INT ',' REG_INT ',' r_posicion
   91              | FORM_INM_B r_posicion
   92              | FORM_J r_posicion
   93              | FORM_J_F REG_INT


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 56 57 58 61 62 63 66 67 68 76 77 78 79
    ')' (41) 56 57 58 61 62 63 66 67 68 76 77 78 79
    ',' (44) 34 40 44 48 52 71 72 76 77 78 79 80 81 82 83 84 86 87 88 89 90
    error (256)
    NL <ivalue> (258) 6 8 9
    T_INT_LIT <ivalue> (259) 27 33 39 43 51 54 59 64 69 71 85
    T_FP_LIT <fvalue> (260) 37 47
    T_ALPHANUM <cvalue> (261) 14 55 56 57 58 60 61 62 63 65 66 67 68 70 72
    T_STRING <cvalue> (262) 28
    REG_INT <ivalue> (263) 71 72 76 77 78 79 80 83 84 86 87 89 90 93
    REG_FP <ivalue> (264) 77 79 81 82 88
    DE_DATA <ivalue> (265) 12
    DE_TEXT <ivalue> (266) 13
    DE_SPACE <ivalue> (267) 27
    DE_GLOBL <ivalue> (268) 14
    DE_IREG <ivalue> (269) 29
    DE_FREG <ivalue> (270) 30
    DE_ASCIIZ <ivalue> (271) 28
    DE_BTB <ivalue> (272) 31
    DE_BYTE <ivalue> (273) 16
    DE_HALF <ivalue> (274) 18
    DE_WORD <ivalue> (275) 20
    DE_DWORD <ivalue> (276) 22
    DE_FLOAT <ivalue> (277) 24
    DE_DOUBLE <ivalue> (278) 26
    FORM_INM <ivalue> (279) 84
    FORM_INM_L <ivalue> (280) 76
    FORM_INM_S <ivalue> (281) 78
    FORM_INM_HI <ivalue> (282) 86
    FORM_INM_LO <ivalue> (283) 87
    FORM_INM_B <ivalue> (284) 91
    FORM_INM_B_FI <ivalue> (285) 89
    FORM_INM_B_FFI <ivalue> (286) 90
    FORM_INM_T <ivalue> (287) 85
    INST_NOP <ivalue> (288) 74
    INST_RET <ivalue> (289) 73
    INST_SYSCALL <ivalue> (290) 75
    FORM_REG <ivalue> (291) 80 83
    FORM_REG_FF <ivalue> (292)
    FORM_INM_FP_L <ivalue> (293) 77
    FORM_INM_FP_S <ivalue> (294) 79
    FORM_FP_REG <ivalue> (295) 81
    FORM_FP_REG_FF <ivalue> (296) 88
    FORM_FP_REG_DF <ivalue> (297) 82
    FORM_REG_R_FP <ivalue> (298)
    FORM_REG_FP_R <ivalue> (299)
    FORM_J <ivalue> (300) 92
    FORM_J_F <ivalue> (301) 93
    LABEL <cvalue> (302) 2
    PINST_LA <ivalue> (303) 72
    PINST_LI <ivalue> (304) 71
    M_LO <ivalue> (305) 57 62 67
    M_HI <ivalue> (306) 56 61 66
    M_DISP <ivalue> (307) 58 63 68


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    r_inicio (57)
        on left: 2 3 4
        on right: 0 6 8 9
    $@1 (58)
        on left: 1
        on right: 2
    r_linea_ensamblador (59)
        on left: 6 8 9 10 11
        on right: 2 3
    $@2 (60)
        on left: 5
        on right: 6
    $@3 (61)
        on left: 7
        on right: 8
    r_directiva (62)
        on left: 12 13 14 16 18 20 22 24 26 27 28 29 30 31
        on right: 6 10
    $@4 (63)
        on left: 15
        on right: 16
    $@5 (64)
        on left: 17
        on right: 18
    $@6 (65)
        on left: 19
        on right: 20
    $@7 (66)
        on left: 21
        on right: 22
    $@8 (67)
        on left: 23
        on right: 24
    $@9 (68)
        on left: 25
        on right: 26
    r_lista_enteros (69)
        on left: 33
        on right: 16 18 20 22 34
    $@10 (70)
        on left: 32
        on right: 33
    r_lista_enteros_cont (71)
        on left: 34 35
        on right: 33
    r_lista_reales (72)
        on left: 37 39
        on right: 24 26 40
    $@11 (73)
        on left: 36
        on right: 37
    $@12 (74)
        on left: 38
        on right: 39
    r_lista_reales_cont (75)
        on left: 40 41
        on right: 37 39
    r_valores_enteros (76)
        on left: 43
        on right: 29 44
    $@13 (77)
        on left: 42
        on right: 43
    r_valores_enteros_cont (78)
        on left: 44 45
        on right: 43
    r_valores_fp (79)
        on left: 47
        on right: 30 48
    $@14 (80)
        on left: 46
        on right: 47
    r_valores_fp_cont (81)
        on left: 48 49
        on right: 47
    r_valores_btb (82)
        on left: 51
        on right: 31 52
    $@15 (83)
        on left: 50
        on right: 51
    r_valores_btb_cont (84)
        on left: 52 53
        on right: 51
    r_inmediato_disp <ivalue> (85)
        on left: 54 55 56 57 58
        on right: 76 77 78 79 83 84
    r_inmediato_lo <ivalue> (86)
        on left: 59 60 61 62 63
        on right: 87
    r_inmediato_hi <ivalue> (87)
        on left: 64 65 66 67 68
        on right: 86
    r_posicion <ivalue> (88)
        on left: 69 70
        on right: 89 90 91 92
    r_instruccion (89)
        on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 8 11


State 0

    0 $accept: . r_inicio $end

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_GLOBL        shift, and go to state 5
    DE_IREG         shift, and go to state 6
    DE_FREG         shift, and go to state 7
    DE_ASCIIZ       shift, and go to state 8
    DE_BTB          shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_HI     shift, and go to state 19
    FORM_INM_LO     shift, and go to state 20
    FORM_INM_B      shift, and go to state 21
    FORM_INM_B_FI   shift, and go to state 22
    FORM_INM_B_FFI  shift, and go to state 23
    FORM_INM_T      shift, and go to state 24
    INST_NOP        shift, and go to state 25
    INST_RET        shift, and go to state 26
    INST_SYSCALL    shift, and go to state 27
    FORM_REG        shift, and go to state 28
    FORM_INM_FP_L   shift, and go to state 29
    FORM_INM_FP_S   shift, and go to state 30
    FORM_FP_REG     shift, and go to state 31
    FORM_FP_REG_FF  shift, and go to state 32
    FORM_FP_REG_DF  shift, and go to state 33
    FORM_J          shift, and go to state 34
    FORM_J_F        shift, and go to state 35
    LABEL           shift, and go to state 36
    PINST_LA        shift, and go to state 37
    PINST_LI        shift, and go to state 38

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 39
    r_linea_ensamblador  go to state 40
    r_directiva          go to state 41
    r_instruccion        go to state 42


State 1

    9 r_linea_ensamblador: NL . r_inicio

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_GLOBL        shift, and go to state 5
    DE_IREG         shift, and go to state 6
    DE_FREG         shift, and go to state 7
    DE_ASCIIZ       shift, and go to state 8
    DE_BTB          shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_HI     shift, and go to state 19
    FORM_INM_LO     shift, and go to state 20
    FORM_INM_B      shift, and go to state 21
    FORM_INM_B_FI   shift, and go to state 22
    FORM_INM_B_FFI  shift, and go to state 23
    FORM_INM_T      shift, and go to state 24
    INST_NOP        shift, and go to state 25
    INST_RET        shift, and go to state 26
    INST_SYSCALL    shift, and go to state 27
    FORM_REG        shift, and go to state 28
    FORM_INM_FP_L   shift, and go to state 29
    FORM_INM_FP_S   shift, and go to state 30
    FORM_FP_REG     shift, and go to state 31
    FORM_FP_REG_FF  shift, and go to state 32
    FORM_FP_REG_DF  shift, and go to state 33
    FORM_J          shift, and go to state 34
    FORM_J_F        shift, and go to state 35
    LABEL           shift, and go to state 36
    PINST_LA        shift, and go to state 37
    PINST_LI        shift, and go to state 38

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 43
    r_linea_ensamblador  go to state 40
    r_directiva          go to state 41
    r_instruccion        go to state 42


State 2

   12 r_directiva: DE_DATA .

    $default  reduce using rule 12 (r_directiva)


State 3

   13 r_directiva: DE_TEXT .

    $default  reduce using rule 13 (r_directiva)


State 4

   27 r_directiva: DE_SPACE . T_INT_LIT

    T_INT_LIT  shift, and go to state 44


State 5

   14 r_directiva: DE_GLOBL . T_ALPHANUM

    T_ALPHANUM  shift, and go to state 45


State 6

   29 r_directiva: DE_IREG . r_valores_enteros

    T_INT_LIT  shift, and go to state 46

    r_valores_enteros  go to state 47


State 7

   30 r_directiva: DE_FREG . r_valores_fp

    T_FP_LIT  shift, and go to state 48

    r_valores_fp  go to state 49


State 8

   28 r_directiva: DE_ASCIIZ . T_STRING

    T_STRING  shift, and go to state 50


State 9

   31 r_directiva: DE_BTB . r_valores_btb

    T_INT_LIT  shift, and go to state 51

    r_valores_btb  go to state 52


State 10

   16 r_directiva: DE_BYTE . $@4 r_lista_enteros

    $default  reduce using rule 15 ($@4)

    $@4  go to state 53


State 11

   18 r_directiva: DE_HALF . $@5 r_lista_enteros

    $default  reduce using rule 17 ($@5)

    $@5  go to state 54


State 12

   20 r_directiva: DE_WORD . $@6 r_lista_enteros

    $default  reduce using rule 19 ($@6)

    $@6  go to state 55


State 13

   22 r_directiva: DE_DWORD . $@7 r_lista_enteros

    $default  reduce using rule 21 ($@7)

    $@7  go to state 56


State 14

   24 r_directiva: DE_FLOAT . $@8 r_lista_reales

    $default  reduce using rule 23 ($@8)

    $@8  go to state 57


State 15

   26 r_directiva: DE_DOUBLE . $@9 r_lista_reales

    $default  reduce using rule 25 ($@9)

    $@9  go to state 58


State 16

   84 r_instruccion: FORM_INM . REG_INT ',' REG_INT ',' r_inmediato_disp

    REG_INT  shift, and go to state 59


State 17

   76 r_instruccion: FORM_INM_L . REG_INT ',' r_inmediato_disp '(' REG_INT ')'

    REG_INT  shift, and go to state 60


State 18

   78 r_instruccion: FORM_INM_S . REG_INT ',' r_inmediato_disp '(' REG_INT ')'

    REG_INT  shift, and go to state 61


State 19

   86 r_instruccion: FORM_INM_HI . REG_INT ',' r_inmediato_hi

    REG_INT  shift, and go to state 62


State 20

   87 r_instruccion: FORM_INM_LO . REG_INT ',' r_inmediato_lo

    REG_INT  shift, and go to state 63


State 21

   91 r_instruccion: FORM_INM_B . r_posicion

    T_INT_LIT   shift, and go to state 64
    T_ALPHANUM  shift, and go to state 65

    r_posicion  go to state 66


State 22

   89 r_instruccion: FORM_INM_B_FI . REG_INT ',' r_posicion

    REG_INT  shift, and go to state 67


State 23

   90 r_instruccion: FORM_INM_B_FFI . REG_INT ',' REG_INT ',' r_posicion

    REG_INT  shift, and go to state 68


State 24

   85 r_instruccion: FORM_INM_T . T_INT_LIT

    T_INT_LIT  shift, and go to state 69


State 25

   74 r_instruccion: INST_NOP .

    $default  reduce using rule 74 (r_instruccion)


State 26

   73 r_instruccion: INST_RET .

    $default  reduce using rule 73 (r_instruccion)


State 27

   75 r_instruccion: INST_SYSCALL .

    $default  reduce using rule 75 (r_instruccion)


State 28

   80 r_instruccion: FORM_REG . REG_INT ',' REG_INT ',' REG_INT
   83              | FORM_REG . REG_INT ',' REG_INT ',' r_inmediato_disp

    REG_INT  shift, and go to state 70


State 29

   77 r_instruccion: FORM_INM_FP_L . REG_FP ',' r_inmediato_disp '(' REG_INT ')'

    REG_FP  shift, and go to state 71


State 30

   79 r_instruccion: FORM_INM_FP_S . REG_FP ',' r_inmediato_disp '(' REG_INT ')'

    REG_FP  shift, and go to state 72


State 31

   81 r_instruccion: FORM_FP_REG . REG_FP ',' REG_FP ',' REG_FP

    REG_FP  shift, and go to state 73


State 32

   88 r_instruccion: FORM_FP_REG_FF . REG_FP ',' REG_FP

    REG_FP  shift, and go to state 74


State 33

   82 r_instruccion: FORM_FP_REG_DF . REG_FP ',' REG_FP

    REG_FP  shift, and go to state 75


State 34

   92 r_instruccion: FORM_J . r_posicion

    T_INT_LIT   shift, and go to state 64
    T_ALPHANUM  shift, and go to state 65

    r_posicion  go to state 76


State 35

   93 r_instruccion: FORM_J_F . REG_INT

    REG_INT  shift, and go to state 77


State 36

    2 r_inicio: LABEL . $@1 r_linea_ensamblador

    $default  reduce using rule 1 ($@1)

    $@1  go to state 78


State 37

   72 r_instruccion: PINST_LA . REG_INT ',' T_ALPHANUM

    REG_INT  shift, and go to state 79


State 38

   71 r_instruccion: PINST_LI . REG_INT ',' T_INT_LIT

    REG_INT  shift, and go to state 80


State 39

    0 $accept: r_inicio . $end

    $end  shift, and go to state 81


State 40

    3 r_inicio: r_linea_ensamblador .

    $default  reduce using rule 3 (r_inicio)


State 41

    6 r_linea_ensamblador: r_directiva . NL $@2 r_inicio
   10                    | r_directiva .

    NL  shift, and go to state 82

    $default  reduce using rule 10 (r_linea_ensamblador)


State 42

    8 r_linea_ensamblador: r_instruccion . NL $@3 r_inicio
   11                    | r_instruccion .

    NL  shift, and go to state 83

    $default  reduce using rule 11 (r_linea_ensamblador)


State 43

    9 r_linea_ensamblador: NL r_inicio .

    $default  reduce using rule 9 (r_linea_ensamblador)


State 44

   27 r_directiva: DE_SPACE T_INT_LIT .

    $default  reduce using rule 27 (r_directiva)


State 45

   14 r_directiva: DE_GLOBL T_ALPHANUM .

    $default  reduce using rule 14 (r_directiva)


State 46

   43 r_valores_enteros: T_INT_LIT . $@13 r_valores_enteros_cont

    $default  reduce using rule 42 ($@13)

    $@13  go to state 84


State 47

   29 r_directiva: DE_IREG r_valores_enteros .

    $default  reduce using rule 29 (r_directiva)


State 48

   47 r_valores_fp: T_FP_LIT . $@14 r_valores_fp_cont

    $default  reduce using rule 46 ($@14)

    $@14  go to state 85


State 49

   30 r_directiva: DE_FREG r_valores_fp .

    $default  reduce using rule 30 (r_directiva)


State 50

   28 r_directiva: DE_ASCIIZ T_STRING .

    $default  reduce using rule 28 (r_directiva)


State 51

   51 r_valores_btb: T_INT_LIT . $@15 r_valores_btb_cont

    $default  reduce using rule 50 ($@15)

    $@15  go to state 86


State 52

   31 r_directiva: DE_BTB r_valores_btb .

    $default  reduce using rule 31 (r_directiva)


State 53

   16 r_directiva: DE_BYTE $@4 . r_lista_enteros

    T_INT_LIT  shift, and go to state 87

    r_lista_enteros  go to state 88


State 54

   18 r_directiva: DE_HALF $@5 . r_lista_enteros

    T_INT_LIT  shift, and go to state 87

    r_lista_enteros  go to state 89


State 55

   20 r_directiva: DE_WORD $@6 . r_lista_enteros

    T_INT_LIT  shift, and go to state 87

    r_lista_enteros  go to state 90


State 56

   22 r_directiva: DE_DWORD $@7 . r_lista_enteros

    T_INT_LIT  shift, and go to state 87

    r_lista_enteros  go to state 91


State 57

   24 r_directiva: DE_FLOAT $@8 . r_lista_reales

    T_INT_LIT  shift, and go to state 92
    T_FP_LIT   shift, and go to state 93

    r_lista_reales  go to state 94


State 58

   26 r_directiva: DE_DOUBLE $@9 . r_lista_reales

    T_INT_LIT  shift, and go to state 92
    T_FP_LIT   shift, and go to state 93

    r_lista_reales  go to state 95


State 59

   84 r_instruccion: FORM_INM REG_INT . ',' REG_INT ',' r_inmediato_disp

    ','  shift, and go to state 96


State 60

   76 r_instruccion: FORM_INM_L REG_INT . ',' r_inmediato_disp '(' REG_INT ')'

    ','  shift, and go to state 97


State 61

   78 r_instruccion: FORM_INM_S REG_INT . ',' r_inmediato_disp '(' REG_INT ')'

    ','  shift, and go to state 98


State 62

   86 r_instruccion: FORM_INM_HI REG_INT . ',' r_inmediato_hi

    ','  shift, and go to state 99


State 63

   87 r_instruccion: FORM_INM_LO REG_INT . ',' r_inmediato_lo

    ','  shift, and go to state 100


State 64

   69 r_posicion: T_INT_LIT .

    $default  reduce using rule 69 (r_posicion)


State 65

   70 r_posicion: T_ALPHANUM .

    $default  reduce using rule 70 (r_posicion)


State 66

   91 r_instruccion: FORM_INM_B r_posicion .

    $default  reduce using rule 91 (r_instruccion)


State 67

   89 r_instruccion: FORM_INM_B_FI REG_INT . ',' r_posicion

    ','  shift, and go to state 101


State 68

   90 r_instruccion: FORM_INM_B_FFI REG_INT . ',' REG_INT ',' r_posicion

    ','  shift, and go to state 102


State 69

   85 r_instruccion: FORM_INM_T T_INT_LIT .

    $default  reduce using rule 85 (r_instruccion)


State 70

   80 r_instruccion: FORM_REG REG_INT . ',' REG_INT ',' REG_INT
   83              | FORM_REG REG_INT . ',' REG_INT ',' r_inmediato_disp

    ','  shift, and go to state 103


State 71

   77 r_instruccion: FORM_INM_FP_L REG_FP . ',' r_inmediato_disp '(' REG_INT ')'

    ','  shift, and go to state 104


State 72

   79 r_instruccion: FORM_INM_FP_S REG_FP . ',' r_inmediato_disp '(' REG_INT ')'

    ','  shift, and go to state 105


State 73

   81 r_instruccion: FORM_FP_REG REG_FP . ',' REG_FP ',' REG_FP

    ','  shift, and go to state 106


State 74

   88 r_instruccion: FORM_FP_REG_FF REG_FP . ',' REG_FP

    ','  shift, and go to state 107


State 75

   82 r_instruccion: FORM_FP_REG_DF REG_FP . ',' REG_FP

    ','  shift, and go to state 108


State 76

   92 r_instruccion: FORM_J r_posicion .

    $default  reduce using rule 92 (r_instruccion)


State 77

   93 r_instruccion: FORM_J_F REG_INT .

    $default  reduce using rule 93 (r_instruccion)


State 78

    2 r_inicio: LABEL $@1 . r_linea_ensamblador

    NL              shift, and go to state 1
    DE_DATA         shift, and go to state 2
    DE_TEXT         shift, and go to state 3
    DE_SPACE        shift, and go to state 4
    DE_GLOBL        shift, and go to state 5
    DE_IREG         shift, and go to state 6
    DE_FREG         shift, and go to state 7
    DE_ASCIIZ       shift, and go to state 8
    DE_BTB          shift, and go to state 9
    DE_BYTE         shift, and go to state 10
    DE_HALF         shift, and go to state 11
    DE_WORD         shift, and go to state 12
    DE_DWORD        shift, and go to state 13
    DE_FLOAT        shift, and go to state 14
    DE_DOUBLE       shift, and go to state 15
    FORM_INM        shift, and go to state 16
    FORM_INM_L      shift, and go to state 17
    FORM_INM_S      shift, and go to state 18
    FORM_INM_HI     shift, and go to state 19
    FORM_INM_LO     shift, and go to state 20
    FORM_INM_B      shift, and go to state 21
    FORM_INM_B_FI   shift, and go to state 22
    FORM_INM_B_FFI  shift, and go to state 23
    FORM_INM_T      shift, and go to state 24
    INST_NOP        shift, and go to state 25
    INST_RET        shift, and go to state 26
    INST_SYSCALL    shift, and go to state 27
    FORM_REG        shift, and go to state 28
    FORM_INM_FP_L   shift, and go to state 29
    FORM_INM_FP_S   shift, and go to state 30
    FORM_FP_REG     shift, and go to state 31
    FORM_FP_REG_FF  shift, and go to state 32
    FORM_FP_REG_DF  shift, and go to state 33
    FORM_J          shift, and go to state 34
    FORM_J_F        shift, and go to state 35
    PINST_LA        shift, and go to state 37
    PINST_LI        shift, and go to state 38

    r_linea_ensamblador  go to state 109
    r_directiva          go to state 41
    r_instruccion        go to state 42


State 79

   72 r_instruccion: PINST_LA REG_INT . ',' T_ALPHANUM

    ','  shift, and go to state 110


State 80

   71 r_instruccion: PINST_LI REG_INT . ',' T_INT_LIT

    ','  shift, and go to state 111


State 81

    0 $accept: r_inicio $end .

    $default  accept


State 82

    6 r_linea_ensamblador: r_directiva NL . $@2 r_inicio

    $default  reduce using rule 5 ($@2)

    $@2  go to state 112


State 83

    8 r_linea_ensamblador: r_instruccion NL . $@3 r_inicio

    $default  reduce using rule 7 ($@3)

    $@3  go to state 113


State 84

   43 r_valores_enteros: T_INT_LIT $@13 . r_valores_enteros_cont

    ','  shift, and go to state 114

    $default  reduce using rule 45 (r_valores_enteros_cont)

    r_valores_enteros_cont  go to state 115


State 85

   47 r_valores_fp: T_FP_LIT $@14 . r_valores_fp_cont

    ','  shift, and go to state 116

    $default  reduce using rule 49 (r_valores_fp_cont)

    r_valores_fp_cont  go to state 117


State 86

   51 r_valores_btb: T_INT_LIT $@15 . r_valores_btb_cont

    ','  shift, and go to state 118

    $default  reduce using rule 53 (r_valores_btb_cont)

    r_valores_btb_cont  go to state 119


State 87

   33 r_lista_enteros: T_INT_LIT . $@10 r_lista_enteros_cont

    $default  reduce using rule 32 ($@10)

    $@10  go to state 120


State 88

   16 r_directiva: DE_BYTE $@4 r_lista_enteros .

    $default  reduce using rule 16 (r_directiva)


State 89

   18 r_directiva: DE_HALF $@5 r_lista_enteros .

    $default  reduce using rule 18 (r_directiva)


State 90

   20 r_directiva: DE_WORD $@6 r_lista_enteros .

    $default  reduce using rule 20 (r_directiva)


State 91

   22 r_directiva: DE_DWORD $@7 r_lista_enteros .

    $default  reduce using rule 22 (r_directiva)


State 92

   39 r_lista_reales: T_INT_LIT . $@12 r_lista_reales_cont

    $default  reduce using rule 38 ($@12)

    $@12  go to state 121


State 93

   37 r_lista_reales: T_FP_LIT . $@11 r_lista_reales_cont

    $default  reduce using rule 36 ($@11)

    $@11  go to state 122


State 94

   24 r_directiva: DE_FLOAT $@8 r_lista_reales .

    $default  reduce using rule 24 (r_directiva)


State 95

   26 r_directiva: DE_DOUBLE $@9 r_lista_reales .

    $default  reduce using rule 26 (r_directiva)


State 96

   84 r_instruccion: FORM_INM REG_INT ',' . REG_INT ',' r_inmediato_disp

    REG_INT  shift, and go to state 123


State 97

   76 r_instruccion: FORM_INM_L REG_INT ',' . r_inmediato_disp '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 124
    T_ALPHANUM  shift, and go to state 125
    M_LO        shift, and go to state 126
    M_HI        shift, and go to state 127
    M_DISP      shift, and go to state 128

    r_inmediato_disp  go to state 129


State 98

   78 r_instruccion: FORM_INM_S REG_INT ',' . r_inmediato_disp '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 124
    T_ALPHANUM  shift, and go to state 125
    M_LO        shift, and go to state 126
    M_HI        shift, and go to state 127
    M_DISP      shift, and go to state 128

    r_inmediato_disp  go to state 130


State 99

   86 r_instruccion: FORM_INM_HI REG_INT ',' . r_inmediato_hi

    T_INT_LIT   shift, and go to state 131
    T_ALPHANUM  shift, and go to state 132
    M_LO        shift, and go to state 133
    M_HI        shift, and go to state 134
    M_DISP      shift, and go to state 135

    r_inmediato_hi  go to state 136


State 100

   87 r_instruccion: FORM_INM_LO REG_INT ',' . r_inmediato_lo

    T_INT_LIT   shift, and go to state 137
    T_ALPHANUM  shift, and go to state 138
    M_LO        shift, and go to state 139
    M_HI        shift, and go to state 140
    M_DISP      shift, and go to state 141

    r_inmediato_lo  go to state 142


State 101

   89 r_instruccion: FORM_INM_B_FI REG_INT ',' . r_posicion

    T_INT_LIT   shift, and go to state 64
    T_ALPHANUM  shift, and go to state 65

    r_posicion  go to state 143


State 102

   90 r_instruccion: FORM_INM_B_FFI REG_INT ',' . REG_INT ',' r_posicion

    REG_INT  shift, and go to state 144


State 103

   80 r_instruccion: FORM_REG REG_INT ',' . REG_INT ',' REG_INT
   83              | FORM_REG REG_INT ',' . REG_INT ',' r_inmediato_disp

    REG_INT  shift, and go to state 145


State 104

   77 r_instruccion: FORM_INM_FP_L REG_FP ',' . r_inmediato_disp '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 124
    T_ALPHANUM  shift, and go to state 125
    M_LO        shift, and go to state 126
    M_HI        shift, and go to state 127
    M_DISP      shift, and go to state 128

    r_inmediato_disp  go to state 146


State 105

   79 r_instruccion: FORM_INM_FP_S REG_FP ',' . r_inmediato_disp '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 124
    T_ALPHANUM  shift, and go to state 125
    M_LO        shift, and go to state 126
    M_HI        shift, and go to state 127
    M_DISP      shift, and go to state 128

    r_inmediato_disp  go to state 147


State 106

   81 r_instruccion: FORM_FP_REG REG_FP ',' . REG_FP ',' REG_FP

    REG_FP  shift, and go to state 148


State 107

   88 r_instruccion: FORM_FP_REG_FF REG_FP ',' . REG_FP

    REG_FP  shift, and go to state 149


State 108

   82 r_instruccion: FORM_FP_REG_DF REG_FP ',' . REG_FP

    REG_FP  shift, and go to state 150


State 109

    2 r_inicio: LABEL $@1 r_linea_ensamblador .

    $default  reduce using rule 2 (r_inicio)


State 110

   72 r_instruccion: PINST_LA REG_INT ',' . T_ALPHANUM

    T_ALPHANUM  shift, and go to state 151


State 111

   71 r_instruccion: PINST_LI REG_INT ',' . T_INT_LIT

    T_INT_LIT  shift, and go to state 152


State 112

    6 r_linea_ensamblador: r_directiva NL $@2 . r_inicio
